--- a/src/locales/es_PR.json
+++ b/src/locales/es_PR.json
@@ -171,6 +171,7 @@
     "exposure_history": "Historial de exposición",
     "home": "Inicio",
     "more": "Más",
+    "more_info": "Más información",
     "report_issue": "Reportar problema",
     "self_assessment": "Autoevaluación"
   },
