--- a/src/locales/ht_HT.json
+++ b/src/locales/ht_HT.json
@@ -99,6 +99,7 @@
     "exposure_history": "Lis ekspozisyon",
     "home": "Lakay",
     "more": "Plis",
+    "more_info": "Plis enfòmasyon",
     "report_issue": "Rapòte yon pwoblèm",
     "self_assessment": "Sante"
   },
