--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -60,6 +60,7 @@
   "navigation": {
     "exposure_history": "Historia Ekspozycji",
     "more": "Więcej",
+    "more_info": "Więcej informacji",
     "self_assessment": "Zdrowie"
   },
   "onboarding": {
