--- a/src/locales/tl.json
+++ b/src/locales/tl.json
@@ -196,6 +196,7 @@
     "exposure_history": "Exposure History o Kasaysayan ng Pagkalantad sa Posibleng Pagkahawa",
     "home": "Home o Umpisa",
     "more": "Higit pa",
+    "more_info": "Karagdagang Impormasyon",
     "report_issue": "Ipagbigay-alam ang Isyu",
     "self_assessment": "Pagsusuri sa Sarili"
   },
