--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -71,6 +71,7 @@
     "exposure_history": "Cronologia delle esposizioni",
     "home": "Home",
     "more": "Altro",
+    "more_info": "Ulteriori informazioni",
     "self_assessment": "Salute"
   },
   "onboarding": {
