--- a/src/locales/sk.json
+++ b/src/locales/sk.json
@@ -27,7 +27,8 @@
     "launch_get_started": "Začať"
   },
   "navigation": {
-    "exposure_history": "História vystavenia sa riziku"
+    "exposure_history": "História vystavenia sa riziku",
+    "more_info": "Viac informácií"
   },
   "onboarding": {
     "privacy_policy": "Ochrana osobných údajov",
