--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -147,6 +147,7 @@
     "bluetooth_info_header": "Bluetooth",
     "get_more_info": "Get more info on {{technology}}",
     "fix": "Fix issues with {{technology}}",
+    "open_settings": "Open Settings",
     "bluetooth": {
       "all_services_on_subheader": "{{applicationName}} will remain active after the app has been closed",
       "bluetooth_disabled_error_message": "Go to the Settings app and enable Bluetooth to fix this error",
