--- a/android/app/src/main/res/values-el/strings.xml
+++ b/android/app/src/main/res/values-el/strings.xml
@@ -2,6 +2,6 @@
 <resources>
   <string name="exposure_notification_channel_description">Ειδοποιήσεις έκθεσης</string>
   <string name="exposure_notification_channel_name">Ειδοποίηση έκθεσης</string>
-  <string name="exposure_notification_message">Κάποιος που βρέθηκε κοντά σας έχει διαγνωστεί θετικά με COVID-19. Πατήστε για περισσότερες πληροφορίες.</string>
+  <string name="exposure_notification_message">Βρεθήκατε κοντά σε κάποιον που έχει διαγνωστεί θετικά με COVID-19. Πατήστε για περισσότερες πληροφορίες.</string>
   <string name="exposure_notification_title">Πιθανή έκθεση στον COVID-19</string>
 </resources>
