--- a/ios/el.lproj/InfoPlist.strings
+++ b/ios/el.lproj/InfoPlist.strings
@@ -1,1 +1,1 @@
-"NSHumanReadableCopyright" = "Πνευματικά δικαιώματα © 2020 Path Check Inc. Όλα τα δικαιώματα διατηρούνται.";
+"NSHumanReadableCopyright" = "Πνευματικά δικαιώματα © 2020 Path Check Inc. Με την επιφύλαξη παντός δικαιώματος.";
