--- a/src/locales/tl.json
+++ b/src/locales/tl.json
@@ -193,6 +193,7 @@
     "select_language": "Piliin ang wika"
   },
   "navigation": {
+    "exposure": "Pagkakalantad",
     "exposure_history": "Exposure History o Kasaysayan ng Pagkalantad sa Posibleng Pagkahawa",
     "home": "Home o Umpisa",
     "more": "Higit pa",
