Tagalog name fix

--- a/src/locales/tl.json
+++ b/src/locales/tl.json
@@ -1,5 +1,5 @@
 {
-  "_display_name": "Ingles",
+  "_display_name": "Tagalog",
   "about": {
     "description": "Ang {{applicationName}} app ay ginawang magagamit ng {{healthAuthorityName}}",
     "operating_system_abbr": "OS",
